# BTO_Adapter

./: .gitignore  README.md  bto_adapter.py  create_knowledge_graph.py  metta_writer.py  pyproject.toml
config/: adapters_config.yaml  biocypher_config.yaml  schema_config.yaml
data/: dbsnp_pos.pkl  dbsnp_rsids.pkl
output/: type_defs.metta
